# surface_reconstruction_python

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.ps1  setup.py
files/complex_terrain/: list_vertex.ply
files/filter_scripts/: filter_script.mlx  filter_script_invalid.mlx
files/simple_terrain/: list_vertex.ply
surface_reconstruction/: __init__.py  open3d_surface.py  pymeshlab_surface.py  singleton_meta.py  surface_reconstruction.py  surface_strategy.py
surface_reconstruction/batch_visualization/: open3d_batch.py  open3d_batch_structured.py  pymeshlab_batch.py
tests/: open3d_test.py  pymeshlab_test.py  surface_reconstruction_test.py
