[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "surface_reconstruction/version.py"
version_scheme = "python-simplified-semver"
# Adds +dirty if the current workdir has changes
local_scheme = "dirty-tag"
