# Reference: https://setuptools.readthedocs.io/en/latest/build_meta.html

[metadata]
name = surface_reconstruction
author = Felipe Michel Ferreira
author_email = mfelipeof@gmail.com
description = Import a point cloud file and perform poisson 3D surface reconstruction algorithm, integrated with third-party libraries (e.g. open3d, pymeshlab...)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mfdeveloper/surface_reconstruction_python
keywords = point-cloud, surface-reconstruction, 3d-processor, 3d-rendering, 3D, poisson, open3d, meshlab
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Environment :: GPU
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires = >=3.3
packages = find:
install_requires =
    open3d ==0.12
    pymeshlab ==0.2
    numpy

[options.data_files]
data =
    files/complex_terrain/list_vertex.ply
    files/simple_terrain/list_vertex.ply
    files/filter_scripts/filter_script.mlx